2001-07-27  Peter Stephenson  <pws@csr.com>

	* 15508: Completion/Unix/Command/_cvs: cvs tag told you it was
	going to complete a tag, but then didn't.

	* 15507: Functions/Misc/zcalc, Doc/Zsh/contrib.yo: new zcalc
	shell function.

2001-07-26  Oliver Kiddle  <opk@zsh.org>

	* 15503: Test/E01options.ztst: fix posixbuiltins test so that it
	isn't broken by the existence of a print external command.

2001-07-26  Peter Stephenson  <pws@csr.com>

	* 15498: Doc/Zsh/builtins.yo, Doc/Zsh/zle.yo: fix cross-refs
	for zle builtins and add extra texinfo nodes for zle keymaps,
	builtins and widgets.

2001-07-25  Bart Schaefer  <schaefer@zsh.org>

	* 15489: Completion/Base/Utility/_describe: Fix typo.

	* 15488: Doc/Zsh/expn.yo: More index entry cleanup.  Reorder the
	description section to look less as if it has two menus in info
	and to add some cross-references.

2001-07-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 15487: Completion/Base/Utility/_describe, Src/Zle/complete.c:
	move pattern matching in the loop to make sure all match specs
	are used

	* 15485: Completion/Unix/Command/_lzop,
	Completion/Zsh/Type/_directory_stack,
	Completion/Zsh/Type/_file_descriptors, Completion/Zsh/Type/_jobs:
	some more places where list-separator should be used

	* 15484: Completion/AIX/Command/_lscfg,
	Completion/AIX/Type/_logical_volumes,
	Completion/Base/Utility/_describe,
	Completion/Unix/Type/_printers, Completion/Zsh/Command/_zstyle,
	Completion/Zsh/Context/_subscript, Doc/Zsh/compsys.yo,
	Src/Zle/computil.c: another fix for 15477 (separator strings);
	add list-separator style

	* 15482: Doc/Zsh/compwid.yo, Src/Zle/compcore.c,
	Src/Zle/computil.c: fixlet for 15477, don't let it remove
	consecutive dummy matches

	* 15477: Completion/Base/Utility/_describe, Doc/Zsh/compwid.yo,
	Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/complete.c,
	Src/Zle/complist.c, Src/Zle/compresult.c, Src/Zle/computil.c:
	make display for groups in _describe nicer; improve packing